# plaid

./: Cargo.toml
kernel/: .gitignore  Cargo.toml  README.md
kernel/src/: console.rs  fdt.rs  fs.rs  lock.rs  main.rs  process.rs  syscall.rs  test.rs
kernel/src/asm/: boot.S  trap.S
src/: fs.rs  lock.rs  main.rs  syscall.rs  test.rs
userspace/: fb  helloworld  shell  sleepy  upload.sh
userspace/cpp/: .gitignore
userspace/init/: .gitignore  Cargo.toml  upload.sh
userspace/init/.cargo/: config
userspace/init/src/: main.rs
userspace/init/src/asm/: start.S
userspace/init/src/linker/: rv64.ld
userspace/plaidsys/: Cargo.toml
userspace/plaidsys/src/: lib.rs  syscall.rs
userspace/plaidsys/src/asm/: syscall.S
userspace/plaiduser/: Cargo.toml
userspace/plaiduser/.cargo/: config
userspace/plaiduser/src/: bump.rs  lib.rs
userspace/smalltalk/: Cargo.toml
userspace/smalltalk/src/: calculator1.lalrpop
