[package]
name = "init"
version = "0.1.0"
authors = ["Robert Roland <rob.roland@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plaiduser = { path = "../plaiduser" }
plaidsys = { path = "../plaidsys" }

[dependencies.ralloc]
path = "../../thirdparty/ralloc"