[package]
name = "plaiduser"
version = "0.1.0"
authors = ["rroland"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
plaidsys = { path = "../plaidsys" }
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[dependencies.spin]
version = "0.7.0"
features = []
